add prototype of GetVarNames
